@@ -97,7 +97,7 @@ public class DailyTimerTask extends TownyTimerTask {
 		/*
 		 * Reduce the number of days conquered towns are conquered for.
 		 */
-		for (Town town : universe.getDataSource().getTowns()) {
+		for (Town town : universe.getTowns()) {
 			if (town.isConquered()) {
 				if (town.getConqueredDays() == 1) {
 					TownUnconquerEvent event = new TownUnconquerEvent(town);
@@ -122,7 +122,7 @@ public class DailyTimerTask extends TownyTimerTask {
 		TownyMessaging.sendDebugMsg("Finished New Day Code");
 		TownyMessaging.sendDebugMsg("Universe Stats:");
 		TownyMessaging.sendDebugMsg("    Residents: " + universe.getNumResidents());
-		TownyMessaging.sendDebugMsg("    Towns: " + universe.getDataSource().getTowns().size());
+		TownyMessaging.sendDebugMsg("    Towns: " + universe.getTowns().size());
 		TownyMessaging.sendDebugMsg("    Nations: " + universe.getNumNations());
 		for (TownyWorld world : universe.getDataSource().getWorlds())
 			TownyMessaging.sendDebugMsg("    " + world.getName() + " (townblocks): " + universe.getTownBlocks().size());
@@ -181,7 +181,7 @@ public class DailyTimerTask extends TownyTimerTask {
 				 * exists.
 				 * We are running in an Async thread so MUST verify all objects.
 				 */
-				if (universe.getDataSource().hasTown(town.getName())) {
+				if (universe.hasTown(town.getName())) {
 					if (town.isCapital() || !town.hasUpkeep() || town.isRuined())
 						continue;
 					
@@ -276,7 +276,7 @@ public class DailyTimerTask extends TownyTimerTask {
 	 * Collect taxes for all towns due from their residents.
 	 */
 	public void collectTownTaxes() {
-		List<Town> towns = new ArrayList<>(universe.getDataSource().getTowns());
+		List<Town> towns = new ArrayList<>(universe.getTowns());
 		ListIterator<Town> townItr = towns.listIterator();
 		Town town;
 
@@ -287,7 +287,7 @@ public class DailyTimerTask extends TownyTimerTask {
 			 * exists.
 			 * We are running in an Async thread so MUST verify all objects.
 			 */
-			if (universe.getDataSource().hasTown(town.getName()) && !town.isRuined())
+			if (universe.hasTown(town.getName()) && !town.isRuined())
 				collectTownTaxes(town);
 		}
 	}
@@ -361,67 +361,60 @@ public class DailyTimerTask extends TownyTimerTask {
 		}
 
 		// Plot Tax
-		if (town.getPlotTax() > 0 || town.getCommercialPlotTax() > 0 || town.getEmbassyPlotTax() > 0) {
+		List<TownBlock> townBlocks = new ArrayList<>(town.getTownBlocks());
+		List<String> lostPlots = new ArrayList<>();
+		ListIterator<TownBlock> townBlockItr = townBlocks.listIterator();
+		TownBlock townBlock;
 
-			List<TownBlock> townBlocks = new ArrayList<>(town.getTownBlocks());
-			List<String> lostPlots = new ArrayList<>();
-			ListIterator<TownBlock> townBlockItr = townBlocks.listIterator();
-			TownBlock townBlock;
+		while (townBlockItr.hasNext()) {
+			townBlock = townBlockItr.next();
+			double tax = townBlock.getType().getTax(town);
 
-			while (townBlockItr.hasNext()) {
-				townBlock = townBlockItr.next();
+			if (!townBlock.hasResident() || tax < 1)
+				continue;
 
-				if (!townBlock.hasResident())
-					continue;
-				Resident resident = townBlock.getResidentOrNull();
+			Resident resident = townBlock.getResidentOrNull();
 
-				/*
-				 * Only collect plot tax from this resident if it really
-				 * still exists. We are running in an Async thread so MUST
-				 * verify all objects.
-				 */
-				if (universe.hasResident(resident.getName())) {
-					if (resident.hasTown() && resident.getTownOrNull() == town)
-						if (TownyPerms.getResidentPerms(resident).containsKey("towny.tax_exempt") || resident.isNPC())
-							continue;
-					
-					double tax = townBlock.getType().getTax(town);
-					if (tax < 1)
+			/*
+			 * Only collect plot tax from this resident if it really
+			 * still exists. We are running in an Async thread so MUST
+			 * verify all objects.
+			 */
+			if (universe.hasResident(resident.getName())) {
+				if (resident.hasTown() && resident.getTownOrNull() == town)
+					if (TownyPerms.getResidentPerms(resident).containsKey("towny.tax_exempt") || resident.isNPC())
 						continue;
 
-					// If the tax would put the town over the bank cap we reduce what will be
-					// paid by the plot owner to what will be allowed.
-					if (TownySettings.getTownBankCap() != 0 && tax + town.getAccount().getHoldingBalance() > TownySettings.getTownBankCap())
-						tax = town.getAccount().getBalanceCap() - town.getAccount().getHoldingBalance();
-					
-					if (!resident.getAccount().payTo(tax, town, String.format("Plot Tax (%s)", townBlock.getType()))) {
-						if (!lostPlots.contains(resident.getName()))
-							lostPlots.add(resident.getName());
+				// If the tax would put the town over the bank cap we reduce what will be
+				// paid by the plot owner to what will be allowed.
+				if (TownySettings.getTownBankCap() != 0 && tax + town.getAccount().getHoldingBalance() > TownySettings.getTownBankCap())
+					tax = town.getAccount().getBalanceCap() - town.getAccount().getHoldingBalance();
 
-						townBlock.setResident(null);
-						
-						// Set the plot price.
-						if (TownySettings.doesPlotTaxNonPaymentSetPlotForSale())
-							townBlock.setPlotPrice(town.getPlotTypePrice(townBlock.getType()));
-						else 
-							townBlock.setPlotPrice(-1);								
+				if (!resident.getAccount().payTo(tax, town, String.format("Plot Tax (%s)", townBlock.getType()))) {
+					if (!lostPlots.contains(resident.getName()))
+						lostPlots.add(resident.getName());
 
-						// Set the plot permissions to mirror the towns.
-						townBlock.setType(townBlock.getType());
-						
-							
-						
-						townBlock.save();
-					}
+					townBlock.setResident(null);
+
+					// Set the plot price.
+					if (TownySettings.doesPlotTaxNonPaymentSetPlotForSale())
+						townBlock.setPlotPrice(town.getPlotTypePrice(townBlock.getType()));
+					else
+						townBlock.setPlotPrice(-1);
+
+					// Set the plot permissions to mirror the towns.
+					townBlock.setType(townBlock.getType());
+
+					townBlock.save();
 				}
-				
 			}
-			if (lostPlots != null && !lostPlots.isEmpty()) {
-				if (lostPlots.size() == 1) 
-					TownyMessaging.sendPrefixedTownMessage(town, Translatable.of("msg_couldnt_pay_plot_taxes", lostPlots.get(0)));
-				else
-					TownyMessaging.sendPrefixedTownMessage(town, Translatable.of("msg_couldnt_pay_plot_taxes_multiple").append(StringMgmt.join(lostPlots, ", ")));
-			}
+		}
+
+		if (lostPlots != null && !lostPlots.isEmpty()) {
+			if (lostPlots.size() == 1) 
+				TownyMessaging.sendPrefixedTownMessage(town, Translatable.of("msg_couldnt_pay_plot_taxes", lostPlots.get(0)));
+			else
+				TownyMessaging.sendPrefixedTownMessage(town, Translatable.of("msg_couldnt_pay_plot_taxes_multiple").append(StringMgmt.join(lostPlots, ", ")));
 		}
 	}
 
@@ -429,7 +422,7 @@ public class DailyTimerTask extends TownyTimerTask {
 	 * Collect or pay upkeep for all towns.
 	 */
 	public void collectTownCosts() {
-		List<Town> towns = new ArrayList<>(universe.getDataSource().getTowns());
+		List<Town> towns = new ArrayList<>(universe.getTowns());
 		ListIterator<Town> townItr = towns.listIterator();
 		Town town;
 		double neutralityCost = TownySettings.getTownNeutralityCost();
@@ -441,7 +434,7 @@ public class DailyTimerTask extends TownyTimerTask {
 			 * Only charge/pay upkeep for this town if it really still exists.
 			 * We are running in an Async thread so MUST verify all objects.
 			 */
-			if (universe.getDataSource().hasTown(town.getName()) && town.hasUpkeep() && !town.isRuined()) {
+			if (universe.hasTown(town.getName()) && town.hasUpkeep() && !town.isRuined()) {
 
 				double upkeep = TownySettings.getTownUpkeepCost(town);
 				double upkeepPenalty = TownySettings.getTownPenaltyUpkeepCost(town);
